--- a/src/components/pagination/pagination-popover.module.scss
+++ b/src/components/pagination/pagination-popover.module.scss
@@ -62,6 +62,6 @@
   flex-grow: 0;
 }
 
-.popup svg {
+.popup > svg {
   fill: var(--page-popup_background-color);
 }
